# birdseed

./: '  Cargo.toml  README.md  data.sql  diesel.toml
docs/: aliases.js  search-index.js  source-files.js
docs/birdseed/: Birdseed.t.html  all.html  enum.Birdseed.html  fn.run.html  index.html  sidebar-items.js
docs/clicolors_control/: all.html  fn.colors_enabled.html  fn.configure_terminal.html  fn.set_colors_enabled.html  index.html  sidebar-items.js
docs/console/: TermFamily.t.html  TermFeatures.t.html  all.html  enum.Alignment.html  enum.Attribute.html  enum.Color.html  enum.Key.html  enum.TermFamily.html  enum.TermTarget.html  fn.colors_enabled.html  fn.measure_text_width.html  fn.pad_str.html  fn.set_colors_enabled.html  fn.strip_ansi_codes.html  fn.style.html  fn.truncate_str.html  fn.user_attended.html  index.html  pad_str.v.html  sidebar-items.js  struct.AnsiCodeIterator.html  struct.Emoji.html  struct.Style.html  struct.StyledObject.html  struct.Term.html  struct.TermFeatures.html
docs/diesel/: all.html  index.html  macro.joinable.html  sidebar-items.js
docs/diesel_migrations/: all.html  enum.MigrationError.html  enum.RunMigrationsError.html  fn.any_pending_migrations.html  fn.find_migrations_directory.html  fn.mark_migrations_in_directory.html  fn.migration_from.html  fn.name.html  fn.revert_latest_migration.html  fn.revert_latest_migration_in_directory.html  fn.run_migrations.html  fn.run_pending_migrations.html  fn.search_for_migrations_directory.html  index.html  macro.embed_migrations.html  mark_migrations_in_directory.v.html  revert_latest_migration_in_directory.v.html  struct.MigrationName.html  trait.Migration.html  trait.MigrationConnection.html
docs/dotenv/: all.html  enum.Error.html  fn.dotenv.html  fn.dotenv_iter.html  fn.from_filename.html  fn.from_filename_iter.html  fn.from_path.html  fn.from_path_iter.html  fn.var.html  fn.vars.html  index.html  type.Result.html
docs/failure/: all.html  index.html  struct.Backtrace.html  struct.Causes.html  struct.Compat.html  struct.Context.html  trait.AsFail.html  trait.Fail.html  trait.ResultExt.html
docs/fake/: Fake.t.html  all.html  dummy.m.html  index.html  macro.dummy.html  macro.fake!.html  macro.fake.html  sidebar-items.js  trait.Fake.html
docs/heck/: index.html  trait.CamelCase.html  trait.KebabCase.html  trait.MixedCase.html  trait.ShoutySnakeCase.html  trait.ShoutySnekCase.html  (+3 more)
src/: lib.rs  main.rs  models.rs  pg_pool.rs  schema.rs  sql_functions.rs
(+1649 files in other folders)
