[package]
name = "birdseed"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
edition = "2018"

[dependencies]
fake = "1.2.2"
diesel = { version = "1.3.3", features = ["postgres"] }
structopt = "0.2.14"
dotenv = "0.13.0"
rand = "0.6.4"
indicatif = "0.11.0"
diesel_migrations = "1.3.0"
