[package]
name = "birdseed"
version = "0.1.0"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
description = "birdseed enables you to seed a libellis database with fake data, clear all tables, or rebuild all tables per the current embedded migrations"
keywords = ["birdseed", "libellis", "seeding", "database", "postgres"]
repository = "https://github.com/libellis/birdseed"
documentation = "https://libellis.github.io/birdseed/birdseed/index.html"
license = "MIT"
edition = "2018"
include = [
    "migrations/*",
    "**/*.rs",
    "Cargo.toml",
    "diesel.toml",
    "README.md",
]

[[bin]]
doc = false
name = "birdseed"
path = "src/bin/birdseed.rs"

[dependencies]
fake = "1.2.2"
diesel = { version = "1.3.3", features = ["postgres"] }
structopt = "0.2.14"
dotenv = "0.13.0"
rand = "0.6.4"
indicatif = "0.11.0"
diesel_migrations = "1.3.0"
