[package]
name = "birdseed"
version = "0.1.95"
authors = ["Peter Farr <Peter@PrismaPhonic.com>"]
description = "birdseed enables you to seed a libellis database with fake data, clear all tables, or rebuild all tables per the current embedded migrations"
keywords = ["birdseed", "libellis", "seeding", "database", "postgres"]
categories = ["command-line-utilities", "database"]
repository = "https://github.com/libellis/birdseed"
documentation = "https://docs.rs/birdseed"
readme = "README.md"
license = "MIT"
edition = "2018"
include = [
    "migrations/*",
    "**/*.rs",
    "Cargo.toml",
    "diesel.toml",
    "README.md",
]

[badges]
travis-ci = { repository = "libellis/birdseed", branch = "master" }
maintenance = { status = "actively-developed" }

[[bin]]
doc = false
name = "birdseed"
path = "src/bin/birdseed.rs"

[dependencies]
fake = "1.2.2"
diesel = { version = "1.3.3", features = ["postgres", "r2d2"] }
structopt = "0.2.14"
dotenv = "0.13.0"
rand = "0.6.4"
indicatif = "0.11.0"
diesel_migrations = "1.3.0"
r2d2 = "0.8.3"
rayon = "1.0.3"
geo = "0.12.0"
diesel-geography = "0.2.0"
geojson = "0.15.0"
serde_json = { version = "1.0.38", features = ["preserve_order"] }
serde = "1.0.88"
